--- a/react/components/BulletGroup/styles.css
+++ b/react/components/BulletGroup/styles.css
@@ -1,3 +1,29 @@
+.bulletGroup-container {
+  display       : flex;
+  flex-direction: row;
+  gap           : 1rem;
+  overflow      : auto;
+  margin        : 0 auto 40px;
+  padding-bottom: 0.5rem;
+  max-width     : 1200px;
+}
+
+.bulletGroup-container::-webkit-scrollbar {
+  height: 4px;
+}
+
+.bulletGroup-container::-webkit-scrollbar-track,
+.bulletGroup-container::-webkit-scrollbar-thumb {
+  background-clip : padding-box;
+  background-color: #dfdfdf;
+  border-left     : 16px solid transparent;
+  border-right    : 16px solid transparent;
+}
+
+.bulletGroup-container::-webkit-scrollbar-thumb {
+  background-color: #7a7a7a;
+}
+
 .bullet__item {
   background-color: #5825CC;
   height          : 140px;
@@ -9,6 +35,7 @@
   align-items     : center;
   text-align      : center;
   cursor          : pointer;
+  min-width       : 98px;
 }
 
 .bullet__item--title {
@@ -16,5 +43,3 @@
   font-size      : 13px;
   font-weight    : 800;
 }
-
-/*  .bullet__item--image .bullet__item--link */
